--- a/CatFeeder/FW/Web/data/index.htm
+++ b/CatFeeder/FW/Web/data/index.htm
@@ -15,19 +15,266 @@
       #timerSettings {
         margin-top: 20px;
       }
+
+      div {
+        display: flex;
+      }
+      div .white-content {
+        height: 155px;
+        /* left: 0px;
+        top: 0px;
+        position: absolute; */
+        width: 100%;
+        display: flex !important;
+      }
+      .group {
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+      }
+      .FeedButton {
+        position: absolute;
+
+        background-color: #0a0a23 !important;
+        color: #fff;
+        border-radius: 25px;
+        height: 50;
+        margin: 16;
+        text-align: center;
+        font-size: 16px;
+        font-family: SF Pro Text;
+        font-weight: 700;
+        text-transform: uppercase;
+        word-wrap: break-word;
+      }
     </style>
   </head>
 
   <body>
-    <h1>餵食器控制器</h1>
-    <p>
-      <img
-        src="css/images/cat_pic.jpg"
-        width="184"
-        height="185"
-        alt="cover image"
-      />
-    </p>
+    <div
+      class="LoggedOut"
+      style="
+        width: 100%;
+        height: 812px;
+        position: relative;
+        background: #4c4c4c;
+        display: flex;
+        flex-direction: column;
+      "
+    >
+      <div
+        class="StatusBar"
+        style="
+          padding-top: 8px;
+          padding-bottom: 13px;
+          padding-left: 21px;
+          padding-right: 14px;
+          left: 0px;
+          top: 0px;
+          position: absolute;
+          justify-content: flex-end;
+          align-items: flex-end;
+          gap: 216px;
+          display: inline-flex;
+        "
+      ></div>
+      <div
+        class="Register"
+        style="
+          left: 243px;
+          top: 729px;
+          position: absolute;
+          text-align: center;
+          color: black;
+          font-size: 13px;
+          font-family: SF Pro Text;
+          font-weight: 700;
+          text-transform: uppercase;
+          word-wrap: break-word;
+        "
+      >
+        register
+      </div>
+      <div
+        class="Button"
+        style="
+          width: 167px;
+          height: 52px;
+          left: 16px;
+          top: 727px;
+          position: absolute;
+        "
+      >
+        <div
+          class="Rectangle2"
+          style="
+            width: 167px;
+            height: 52px;
+            left: 0px;
+            top: 0px;
+            position: absolute;
+            background: white;
+            border-radius: 6px;
+            border: 2px black solid;
+          "
+        ></div>
+        <div
+          class="LogIn"
+          style="
+            left: 61px;
+            top: 19px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 13px;
+            font-family: Roboto;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 0.52px;
+            word-wrap: break-word;
+          "
+        >
+          log in
+        </div>
+      </div>
+      <div
+        class="Button"
+        style="
+          width: 167px;
+          height: 52px;
+          left: 192px;
+          top: 727px;
+          position: absolute;
+        "
+      >
+        <div
+          class="Rectangle2"
+          style="
+            width: 167px;
+            height: 52px;
+            left: 0px;
+            top: 0px;
+            position: absolute;
+            background: black;
+            border-radius: 6px;
+          "
+        ></div>
+        <div
+          class="Register"
+          style="
+            left: 51px;
+            top: 19px;
+            position: absolute;
+            text-align: center;
+            color: white;
+            font-size: 13px;
+            font-family: Roboto;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 0.52px;
+            word-wrap: break-word;
+          "
+        >
+          register
+        </div>
+      </div>
+      <div class="white-content" style="background-color: #2c2c2c">
+        <div class="group">
+          <div>
+            <img
+              class="Union"
+              style="width: 90px; height: 90px"
+              src="css/images/catLogo_pic.png"
+            />
+            <!-- <div
+              class="circleBackground"
+              style="border-radius: 50%; color: #8f8f8f; width: 90; height: 90"
+            ></div> -->
+          </div>
+          <div
+            class="Photo"
+            style="
+              text-align: center;
+              color: white;
+              font-size: 48px;
+              font-family: Comfortaa;
+              font-weight: 400;
+              word-wrap: break-word;
+            "
+          >
+            hoohoo Feeder
+          </div>
+        </div>
+
+        <div
+          class="Component"
+          style="
+            width: 139px;
+            height: 28px;
+            left: 16px;
+            top: 659px;
+            position: absolute;
+          "
+        >
+          <div
+            class="PawelCzerwinski"
+            style="
+              left: 36px;
+              top: 0px;
+              position: absolute;
+              color: black;
+              font-size: 13px;
+              font-family: Roboto;
+              font-weight: 700;
+              word-wrap: break-word;
+            "
+          >
+            Jake Miya
+          </div>
+          <div
+            class="PawelCzerwinski"
+            style="
+              left: 36px;
+              top: 15px;
+              position: absolute;
+              color: rgba(0, 0, 0, 0.8);
+              font-size: 11px;
+              font-family: Roboto;
+              font-weight: 400;
+              word-wrap: break-word;
+            "
+          >
+            @JMhouse
+          </div>
+          <img
+            class="Ellipse"
+            style="
+              width: 28px;
+              height: 28px;
+              left: 0px;
+              top: 0px;
+              position: absolute;
+              border-radius: 9999px;
+            "
+            src="css/images/catLogo_pic.png"
+          />
+        </div>
+      </div>
+
+      <div style="display: inline-flex">
+        <p style="color: white; margin: 16">飼料量：</p>
+        <div id="slider"></div>
+      </div>
+      <div style="display: inline- flex">
+        <div id="LED_SW">
+          <button class="FeedButton" value="Go" name="FeedSW" onClick="test">
+            手動餵食
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <p></p>
     飼料量：
     <div id="slider"></div>
     送出飼料
