FW後端更新Server POST API寫法, 新增JSON處理 Web前端新增UI element plus的元件使用，加入時鐘設置以及手動餵食功能

--- a/CatFeeder/FW/main/data/index.htm
+++ b/CatFeeder/FW/main/data/index.htm
@@ -1,181 +1,14 @@
-<html>
+<!doctype html>
+<html lang="en" class="dark">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ESP8266 Smart Home project</title>
-    <link href="css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
-    <style type="text/css">
-      body {
-        font-family: "微軟正黑體", "黑體-繁", sans-serif;
-      }
-      #slider {
-        width: 300px;
-        margin: 15px;
-      }
-      #timerSettings {
-        margin-top: 20px;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="index-N0UWMCmE.js"></script>
+    <link rel="stylesheet" crossorigin href="index-wYew2GRv.css" />
   </head>
-
   <body>
-    <h1>餵食器控制器</h1>
-    <p>
-      <img
-        src="css/images/cat_pic.jpg"
-        width="184"
-        height="185"
-        alt="cover image"
-      />
-    </p>
-    飼料量：
-    <div id="slider"></div>
-    送出飼料
-    <div>
-      <button
-        type="button"
-        id="FeedButton"
-        class="FeedSW"
-        value="Go"
-        name="FeedSW"
-        onClick="test"
-      >
-        GO
-      </button>
-    </div>
-    LED開關：
-    <div id="LED_SW">
-      <input type="radio" id="LED_ON" class="SW" value="ON" name="SW" /><label
-        for="LED_ON"
-        >開</label
-      >
-      <input
-        type="radio"
-        id="LED_OFF"
-        class="SW"
-        checked="checked"
-        value="OFF"
-        name="SW"
-      /><label for="LED_OFF"> 關 </label>
-    </div>
-
-    <!-- New functionalities: Current Time and Timer Settings -->
-    <div id="currentTime">
-      <p>當前時間: <span id="currentDateTime"></span></p>
-    </div>
-    <div id="timerSettings">
-      <h3>手動設定定時功能</h3>
-      <label for="daysOfWeek">選擇星期：</label>
-      <select id="daysOfWeek" multiple>
-        <option value="星期一">星期一</option>
-        <option value="星期二">星期二</option>
-        <option value="星期三">星期三</option>
-        <option value="星期四">星期四</option>
-        <option value="星期五">星期五</option>
-        <option value="星期六">星期六</option>
-        <option value="星期日">星期日</option>
-      </select>
-      <br />
-      <label for="hour">小時：</label>
-      <input type="number" id="hour" min="0" max="23" />
-      <br />
-      <label for="minute">分鐘：</label>
-      <input type="number" id="minute" min="0" max="59" />
-      <br />
-      <button id="addTimerButton">Add</button>
-      <button id="removeTimerButton">Remove</button>
-
-      <!-- List to display added timers -->
-      <h3>定時清單</h3>
-      <ul id="timerList"></ul>
-    </div>
-
-    <p>
-      My github《<a href="https://github.com/jj21065?tab=repositories"
-        >SmartCatFeeder</a
-      >》
-    </p>
-
-    <script src="js/jquery-1.12.1.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script>
-      var light = 127;
-      $(function () {
-        // Existing code...
-        // $(".FeedSW").click(function (evt) {
-        //   // var state = $(this).val();
-        //   var state = "go";
-        //   $.post("/feed", { feed: state });
-        // });
-        var btn = document.querySelector(".FeedSW");
-        btn.onclick = function () {
-          console.log("click");
-          var state = "go";
-          $.post("/feed", { feed: state });
-        };
-
-        $("#LED_SW").buttonset();
-        $(".SW").change(function (evt) {
-          console.log(".SW");
-
-          var state = $(this).val();
-          $.post("/sw", { led: state });
-        });
-
-        $("#slider").slider({
-          orientation: "horizontal",
-          range: "max",
-          max: 255,
-          value: 127,
-          change: function () {
-            var val = $(this).slider("value");
-            $.post("/foodAmount", { food: val });
-          },
-        });
-        // Fetch current time from the internet
-        function getCurrentTime() {
-          // $.get("https://worldtimeapi.org/api/ip", function (data) {
-          //   var currentDateTime = data.utc_datetime;
-          //   $("#currentDateTime").text(currentDateTime);
-          // });
-
-          var localDateTime = new Date().toLocaleString();
-          $("#currentDateTime").text(localDateTime);
-        }
-
-        // Manual timer settings
-        $("#addTimerButton").click(function () {
-          var selectedDays = $("#daysOfWeek").val();
-          var selectedHour = $("#hour").val();
-          var selectedMinute = $("#minute").val();
-
-          // Add timer to the list with checkbox
-          var timerText =
-            "星期" +
-            selectedDays.join(", ") +
-            " " +
-            selectedHour +
-            ":" +
-            selectedMinute;
-          $("<li>")
-            .html('<input type="checkbox">' + timerText)
-            .appendTo("#timerList");
-
-          // Clear input fields
-          $("#hour, #minute").val("");
-        });
-
-        // Remove selected timer from the list
-        $("#removeTimerButton").click(function () {
-          $("#timerList input[type=checkbox]:checked").closest("li").remove();
-        });
-
-        // Fetch current time on page load
-        getCurrentTime();
-
-        // Update current time every 1 minute (adjust as needed)
-        setInterval(getCurrentTime, 10000);
-      });
-    </script>
+    <div id="app"></div>
   </body>
 </html>
