--- a/CatFeeder/FW/main/data/index.htm
+++ b/CatFeeder/FW/main/data/index.htm
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="index-N0UWMCmE.js"></script>
-    <link rel="stylesheet" crossorigin href="index-wYew2GRv.css" />
+    <script type="module" crossorigin src="index-9DS0gqNe.js"></script>
+    <link rel="stylesheet" crossorigin href="index-5PxQIW7J.css" />
   </head>
   <body>
     <div id="app"></div>
