--- a/CatFeeder/FW/main/data/index.htm
+++ b/CatFeeder/FW/main/data/index.htm
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="index-9DS0gqNe.js"></script>
-    <link rel="stylesheet" crossorigin href="index-5PxQIW7J.css" />
+    <script type="module" crossorigin src="index-iwqwOe0h.js"></script>
+    <link rel="stylesheet" crossorigin href="index-gm180ORp.css">
   </head>
   <body>
     <div id="app"></div>
